# renamify

./: .clippy.toml  .gitignore  .mcp.json.example  .rfignore  .rnignore  AGENTS.md  CLAUDE.md  Cargo.toml  DOCUMENTATION.md  FEATURE_IDEAS.md  INITIAL_PLANNING.md  LICENSE  README.md  RELEASES.md  RELEASING.md  Taskfile.docs.yml  Taskfile.mcp.yml  Taskfile.rust.yml  Taskfile.vscode.yml  Taskfile.yml  clippy.toml  config.toml.example  dev-setup.sh  install.sh  justfile  lefthook.yml  rustfmt.toml  test.rs  test_compound.rs  test_diff_demo.rs  test_windows_prefix.rs  test_windows_prefix2.rs  typos.toml
.cargo/: config.toml
.github/: codecov.yml  wait-for-checks.js
.github/workflows/: ci.yml  deploy-install-script.yml  docs.yml  e2e.yml  mcp.yml  release-cli.yml  release-mcp.yml  release-vscode.yml  release.yml  shellcheck.yml  vscode.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: atomic-prd.txt  prd.txt  vscode-ext-prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
docs/: .prettierignore  .prettierrc.json  CLAUDE.md  README.md  astro.config.mjs  biome.jsonc  package-lock.json  package.json  pnpm-lock.yaml
docs/public/: install.sh
examples/preview_format_rename/: plan.json  plan_diff.txt
refaktor-cli/: Cargo.toml
refaktor-cli/src/: apply.rs  history.rs  main.rs  plan.rs  redo.rs  rename.rs  status.rs  undo.rs
refaktor-cli/tests/: cli_tests.rs  train_case_e2e_test.rs
refaktor-core/: Cargo.toml
refaktor-core/fuzz/: Cargo.toml
refaktor-core/fuzz/fuzz_targets/: fuzz_pattern.rs
refaktor-core/src/: acronym.rs  api.rs  apply.rs  case_model.rs  coercion.rs  compound_matcher.rs  compound_scanner.rs  config.rs  history.rs  id_resolver.rs  lib.rs  lock.rs  pattern.rs  preview.rs  rename.rs  scanner.rs  undo.rs
refaktor-core/src/operations/: apply.rs  mod.rs  plan.rs  rename.rs  undo.rs
refaktor-core/tests/: acronym_cli_test.rs  acronym_variant_test.rs  apply_tests.rs  apply_tests.rs.bak  apply_tests.rs.bak2  apply_tests.rs.bak3  apply_undo_integration_test.rs  coercion_separator_test.rs  coercion_tests.rs  compound_position_test.rs  compound_word_bug_test.rs  compound_word_test.rs  debug_variant_generation.rs  diff_rendering_test.rs  dot_directory_test.rs  gitignore_test.rs  hyphenated_capitalized_test.rs  mixed_style_test.rs  multiple_matches_per_line_test.rs  performance_test.rs  preview_snapshots.rs  replacement_edge_cases_test.rs  rfignore_test.rs  tokenization_edge_cases_test.rs  train_case_apply_test.rs  train_case_literals_test.rs  variant_matching_test.rs
refaktor-core/tests/snapshots/: preview_snapshots__diff_format_snapshot.snap  preview_snapshots__diff_format_with_color_snapshot.snap  preview_snapshots__empty_plan_diff_snapshot.snap  preview_snapshots__empty_plan_table_snapshot.snap  preview_snapshots__json_format_snapshot.snap  preview_snapshots__root_directory_rename_handling.snap  preview_snapshots__summary_format_snapshot.snap  preview_snapshots__table_format_snapshot.snap  preview_snapshots__table_format_with_color_snapshot.snap
refaktor-mcp/: .gitignore  README.md  RELEASES.md  package.json  tsconfig.json  vitest.config.ts
refaktor-mcp/src/: index.ts  refaktor-service.test.ts  refaktor-service.ts  tools.test.ts  tools.ts
renamify-cli/: .gitignore  Cargo.toml  test_sigterm.sh
renamify-cli/src/: apply.rs  history.rs  main.rs  plan.rs  redo.rs  rename.rs  replace.rs  search.rs  status.rs  test_lock_signals.rs  undo.rs
renamify-cli/src/cli/: args.rs  mod.rs  types.rs
renamify-cli/tests/: binary_name_preservation.rs  case_style_filtering.rs  cli_tests.rs  exclude_matching_lines_cli_test.rs  output_format_test.rs  replace_command_test.rs  search_command_test.rs  train_case_e2e_test.rs
renamify-core/: Cargo.toml  convert-ts-bindings-to-ambient.js  convert-ts-bindings-to-ambient.sh  package.json  pnpm-workspace.yaml
renamify-core/bindings/: CoercionMode.d.ts  CoercionStyle.d.ts  HistoryEntry.d.ts  MatchHunk.d.ts  Plan.d.ts  PlanOptions.d.ts  Rename.d.ts  RenameKind.d.ts  Stats.d.ts  Style.d.ts
renamify-core/fuzz/: Cargo.toml
renamify-core/src/: acronym.rs  apply.rs  atomic.rs  case_constraints.rs  case_model.rs  coercion.rs  compound_matcher.rs  compound_scanner.rs  config.rs  history.rs  id_resolver.rs  interrupt.rs  lib.rs  lock.rs  output.rs  pattern.rs  preview.rs  rename.rs  scanner.rs  undo.rs
renamify-core/tests/: acronym_cli_test.rs  acronym_variant_test.rs  ambiguity_integration_test.rs  apply_tests.rs  apply_undo_integration_test.rs  coercion_case_constraints_test.rs  coercion_separator_test.rs  coercion_tests.rs  compound_position_test.rs  compound_word_test.rs  debug_variant_generation.rs  diff_rendering_test.rs  dot_directory_test.rs  double_underscore_prefix_test.rs  exact_match_preserve_test.rs  exclude_matching_lines_test.rs  export_bindings.rs  (+26 more)
renamify-mcp/: README.md  RELEASES.md  biome.jsonc  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
renamify-vscode/: .fantasticonrc.js  .gitignore  .prettierignore  .prettierrc.json  .vscode-test.mjs  CLAUDE.md  LICENSE  README.md  biome.jsonc  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-icon.html  tsconfig.json
scripts/: build-release.sh  bump-version.sh  bump-workflow-cache.sh  check-whitespace.sh  create-release-tags.sh  e2e-test.sh  format.sh  generate-changelog.sh  install.sh  is-text-file.sh  run-all-tests.sh  self-referential-e2e-test.sh  shellcheck.sh  validate_docs_links.js
(+138 files in other folders)
