[workspace]
members = ["refaktor-core", "refaktor-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Refaktor Contributors"]
license = "MIT"
repository = "https://github.com/ndbroadbent/refaktor"
homepage = "https://github.com/ndbroadbent/refaktor"

[workspace.dependencies]
# Core dependencies
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.11"
bstr = "1"
ignore = "0.4"
globset = "0.4"
walkdir = "2.5"
content_inspector = "0.2"
memmap2 = "0.9"
rayon = "1.10"
similar = "2.5"
comfy-table = "7"
nu-ansi-term = "0.50"
tempfile = "3"
sha2 = "0.10"
clap = { version = "4.5", features = ["derive", "cargo"] }

# Dev dependencies
proptest = "1.4"
insta = "1.39"
assert_cmd = "2"
predicates = "3"
assert_fs = "1"
criterion = "0.5"