[workspace]
members = ["renamify-core", "renamify-cli"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["DocSpring"]
license = "MIT"
repository = "https://github.com/DocSpring/renamify"
homepage = "https://github.com/DocSpring/renamify"

[workspace.dependencies]
# Core dependencies
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "11.0"
regex = "1.11"
bstr = "1"
ignore = "0.4"
globset = "0.4"
walkdir = "2.5"
content_inspector = "0.2"
memmap2 = "0.9"
rayon = "1.10"
similar = "2.5"
comfy-table = "7"
nu-ansi-term = "0.50"
tempfile = "3"
sha2 = "0.10"
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Dev dependencies
proptest = "1.4"
insta = "1.39"
assert_cmd = "2"
predicates = "3"
assert_fs = "1"
criterion = "0.7"
