[package]
name = "refaktor-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for Refaktor - smart search & replace for code and files"

[[bin]]
name = "refaktor"
path = "src/main.rs"

[dependencies]
refaktor-core = { path = "../refaktor-core" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ctrlc = "3.4"
clap_complete = "4.5"
dirs = "5.0"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
assert_fs = { workspace = true }
tempfile = { workspace = true }
